UX: Fix post notice on mobile

--- a/app/assets/stylesheets/common/base/topic-post.scss
+++ b/app/assets/stylesheets/common/base/topic-post.scss
@@ -870,10 +870,7 @@ a.mention-group {
   border-top: 1px solid $primary-low;
   color: $primary;
   padding: 1em;
-  width: calc(
-    #{$topic-body-width} + #{$topic-avatar-width} - #{$topic-body-width-padding} +
-      3px
-  );
+  margin-bottom: 1em;
 
   p {
     margin: 0;
